--- a/client/src/app/[lng]/globals.css
+++ b/client/src/app/[lng]/globals.css
@@ -14,6 +14,7 @@
   --theme-text-muted: #666666;
   --theme-text-subtle: #dfdfdf;
   --theme-primary: #0373F5;
+  --theme-primary-light: #0373F5;
   --theme-accent-blue: #0070f1;
   --theme-accent-blue-bg: #ebf5ff;
   --theme-accent-blue-border: #cce6ff;
@@ -37,6 +38,7 @@
     --theme-text-muted: #808080;
     --theme-text-subtle: #404040;
     --theme-primary: #0373F5;
+    --theme-primary-light: #52a8ff;
     --theme-accent-blue: #0070f1;
     --theme-accent-blue-bg: #10233d;
     --theme-accent-blue-border: #0D3868;
@@ -60,6 +62,7 @@ html.light {
   --theme-text-muted: #666666;
   --theme-text-subtle: #dfdfdf;
   --theme-primary: #0373F5;
+  --theme-primary-light: #0373F5;
   --theme-accent-blue: #0070f1;
   --theme-accent-blue-bg: #ebf5ff;
   --theme-accent-blue-border: #cce6ff;
@@ -82,6 +85,7 @@ html.dark {
   --theme-text-muted: #808080;
   --theme-text-subtle: #404040;
   --theme-primary: #0373F5;
+  --theme-primary-light: #52a8ff;
   --theme-accent-blue: #0070f1;
   --theme-accent-blue-bg: #10233d;
   --theme-accent-blue-border: #0D3868;
