Main component and decision screen optimisation

--- a/client/src/app/[lng]/globals.css
+++ b/client/src/app/[lng]/globals.css
@@ -11,8 +11,11 @@
   --theme-bg-muted-dark: #ffffff;
   --theme-bg-muted-dark-hover: #ffffff;
   --theme-fg-base: #171717;
+  --theme-fg-light: #3c3c3c;
+  --theme-fg-dark: #181818;
   --theme-text-muted: #666666;
   --theme-text-subtle: #dfdfdf;
+  --theme-text-subtle-dark: #dfdfdf;
   --theme-primary: #0373F5;
   --theme-primary-light: #0373F5;
   --theme-success: #4aa75c;
@@ -32,12 +35,15 @@
     --theme-bg-base: #000000;
     --theme-bg-dark: #0a0a0a;
     --theme-fg-base: #ffffff;
+    --theme-fg-light: #e7e7e7;
+    --theme-fg-dark: #c5c5c5;
     --theme-bg-muted: #1a1a1a;
     --theme-bg-muted-hover: #1f1f1f;
     --theme-bg-muted-dark: #1f1f1f;
     --theme-bg-muted-dark-hover: #1a1a1a;
     --theme-text-muted: #808080;
     --theme-text-subtle: #404040;
+    --theme-text-subtle-dark: #232323;
     --theme-primary: #0373F5;
     --theme-primary-light: #52a8ff;
     --theme-success: #409850;
@@ -57,12 +63,15 @@ html.light {
   --theme-bg-base: #ffffff;
   --theme-bg-dark: #ffffff;
   --theme-fg-base: #171717;
+  --theme-fg-light: #3c3c3c;
+  --theme-fg-dark: #181818;
   --theme-bg-muted: #f2f2f2;
   --theme-bg-muted-hover: #ebebeb;
   --theme-bg-muted-dark: #ffffff;
   --theme-bg-muted-dark-hover: #ffffff;
   --theme-text-muted: #666666;
   --theme-text-subtle: #dfdfdf;
+  --theme-text-subtle-dark: #dfdfdf;
   --theme-primary: #0373F5;
   --theme-primary-light: #0373F5;
   --theme-success: #4aa75c;
@@ -81,12 +90,15 @@ html.dark {
   --theme-bg-base: #000000;
   --theme-bg-dark: #0a0a0a;
   --theme-fg-base: #ffffff;
+  --theme-fg-light: #e7e7e7;
+  --theme-fg-dark: #c5c5c5;
   --theme-bg-muted: #1a1a1a;
   --theme-bg-muted-hover: #1f1f1f;
   --theme-bg-muted-dark: #1f1f1f;
   --theme-bg-muted-dark-hover: #1a1a1a;
   --theme-text-muted: #808080;
   --theme-text-subtle: #404040;
+  --theme-text-subtle-dark: #232323;
   --theme-primary: #0373F5;
   --theme-primary-light: #52a8ff;
   --theme-success: #409850;
